--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <canvas id="myCanvas" width="420" height="920"></canvas>
     
     <script src="script.js"></script>
 </body>
