--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="myCanvas" width="420" height="920"></canvas>
+    <h4>Ski Game</h4>  <h5>Score:0</h5> <h5>Spped: </h5> 
+    <canvas id="myCanvas" width="420" height="720"></canvas>
+
     
     <script src="script.js"></script>
 </body>
