--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h4>Ski Game</h4>  <h5>Score:0</h5> <h5>Spped: </h5> 
-    <canvas id="myCanvas" width="420" height="720"></canvas>
+    <h4>Ski Game</h4> 
+     <div id='score'></div> 
+     <div id='speed'></div> 
+     <!-- <h5>Speed:0</h5>  -->
+    <canvas id="myCanvas" width="600" height="250"></canvas>
 
     
     <script src="script.js"></script>
