--- a/index.html
+++ b/index.html
@@ -8,13 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h4>Ski Game</h4> 
+    <!-- <h4>Ski Game</h4>  -->
      <div id='score'></div> 
      <div id='speed'></div> 
-     <!-- <h5>Speed:0</h5>  -->
-    <canvas id="myCanvas" width="600" height="250"></canvas>
-
-    
+    <canvas id="myCanvas" width="800" height="400"></canvas>
     <script src="script.js"></script>
 </body>
 </html>
