--- a/end.html
+++ b/end.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+
 </head>
 <body>
-    <style> </style>
-    <h1>Welcome to my Skiing Game </h6>
-<h1>Use ← and → to steer</h6>
-    <h1>Avoid trees and collect coins</h6>
-   <button onclick="window.location.href='game.html';">Start Game</button>
+    
+
+    <h4>Game Over</h4>
+    <button onclick="window.location.href='game.html';"> Play Again</button>
 </body>
 </html>
