--- a/game.html
+++ b/game.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <style> </style>
-    <h1>Welcome to my Skiing Game </h6>
-<h1>Use ← and → to steer</h6>
-    <h1>Avoid trees and collect coins</h6>
-   <button onclick="window.location.href='game.html';">Start Game</button>
+    
+     <div id='score'></div> 
+     <div id='speed'></div> 
+
+     <div class="game-timer">1:00</div>
+    <canvas id="myCanvas" width="800" height="400"></canvas>
+    <script src="script.js"></script>
 </body>
 </html>
