--- a/end.html
+++ b/end.html
@@ -4,14 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>Game Over</title>
+    <link rel="icon" type="image/x-icon" href="favicon-16x16.png">
+<link rel="stylesheet" href="indexstyle.css">
 
 </head>
 <body>
     
 
-    <h4>Game Over</h4>
+    <h1>Game Over</h4>
+    <h2 id="finalscore">finalScore</h2>
     <button onclick="window.location.href='game.html';"> Play Again</button>
+    <button onclick="window.location.href='index.html';"> Return Home</button>
+    <script src="endscript.js"></script>
+
+
+    <div class="navbar">
+        <a href="#contact">Contact Me</a>
+        <a href="https://github.com/asadrm63">GitHub</a>
+        <a href="https://www.linkedin.com/in/asadrahm/" >LinkedIn</a>
+     </div>
 </body>
 </html>
