--- a/index.html
+++ b/index.html
@@ -4,13 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ski Homepage</title>
+    <link rel="icon" type="image/x-icon" href="favicon-16x16.png">
+    <link rel="stylesheet" href="indexstyle.css">
 </head>
 <body>
     <style> </style>
     <h1>Welcome to my Skiing Game </h6>
-<h1>Use ← and → to steer</h6>
+    <h1>Use ← and → to steer</h6>
     <h1>Avoid trees and collect coins</h6>
-   <button onclick="window.location.href='game.html';">Start Game</button>
+    <h1>Don't get eaten by the yeti</h6>
+ <button onclick="window.location.href='game.html';">Start Game</button>
+  <div>
+    <audio  autoplay>
+        <source src="music.mp3" type="audio/mpeg">
+      </audio>
+        </div>
+   <div class="navbar">
+   <a href="#contact">Contact Me</a>
+   <a href="https://github.com/asadrm63">GitHub</a>
+   <a href="https://www.linkedin.com/in/asadrahm/" >LinkedIn</a>
+</div>
 </body>
 </html>
