--- a/game.html
+++ b/game.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ski Game</title>
+    <link rel="icon" type="image/x-icon" href="favicon-16x16.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
      <div id='score'></div> 
-     <div id='speed'></div> 
+     <!-- <div id='speed'></div>  -->
 
      <div class="game-timer">1:00</div>
     <canvas id="myCanvas" width="800" height="400"></canvas>
+    <audio autoplay>
+        <source src="music.mp3" type="audio/mpeg">
+      </audio>
     <script src="script.js"></script>
 </body>
 </html>
